--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body{
     padding-left: 20px;
     font-size: 35px;
     font-weight:600;
+  /* border: 1px solid salmon; */
 }
 span{
     color: rgb(241, 5, 5);
@@ -53,7 +54,8 @@ a {
   text-decoration: none;
 }
 .right_side{
-    margin-left: 32rem;
+  /* border: 1px solid salmon; */
+    margin-left: 24rem;
     display: flex;
     align-items: center;
     text-align: center;
@@ -110,7 +112,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    margin: 60px;
+    margin: 100px 60px 100px 60px;
   }
 
   .skills h2#title_skills {
@@ -152,8 +154,8 @@ a {
     color: #ff6b6b;
   }
 
-
   .achievements {
+    /* margin: 100px 20px 100px 20px; */
     margin: 20px;
     background-color: #fff;
     padding: 20px;
@@ -221,6 +223,11 @@ a {
 
 /* project section */
 /*Projects*/
+.project_showCase{
+  margin-top: 10px;
+}
+
+
 .topOfTheProject h2 {
   color: #333333;
   font-size: 42px;
@@ -392,7 +399,6 @@ a {
 
 .whitebox {
   height: 120px;
-  margin-top: 50px;
   background-color: #000;
   padding: 20px;
   color: #fff;
@@ -442,6 +448,7 @@ a {
 .future p{
   text-align: center;
   color: #000;
+  margin: 30px;
 }
 
 
@@ -492,213 +499,54 @@ a {
   /* border: 1px solid salmon; */
 }
 
-
-/* media queries */
-@media screen and (max-width: 768px){
-  .nav #dev{
-    font-size: 30px;
-    margin-left: 20px;
-  }
-  .nav .right_side{
-    display: none;
-  }
-  .content .about{
-    font-size: 30px;
-  }
-  .content #abbt{
-    margin-top: 8px;
-    font-size: 20px;
-  }
-  .skills{
-    margin: 65px;
-  }
-  .skills div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px;
-    text-align: center;
-  }
-  .skills h2#title_skills {
-    margin-top: 2px;
-    margin-bottom: 20px;
-  }
-  .achievements {
-    margin: 30px;
-    padding: 19px;
-  }
-  .image{
-    display: none;
-  }
-  .achievements h2#achievements_title {
-    margin-top: 15px;
-    margin-bottom: 20px;
-  }
- .titleOfProjectShowCase h2{
-    font-size: 45px;
-  }
-  .certificates_list .c{
-    width:85%;
-    height: 80%;
-  }
-  .topOfTheProject #pt{
-    color: #fff;
-  }
-  .projects{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 40px;
-  }
-.project1, 
-.project2,
-.project3 {
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 20px;
-  height:580px;
-  width: 500px;
-  margin: 20px;
-}
-
-.project1 img, 
-.project2 img {
-  height: 260px;
-  width: 330px;
-  border-radius: 15px;
-  display: block;
-  margin: 10px auto;
-}
-
-.project3 img{
-  height:300px;
-  width: 350px;
-  border-radius: 15px;
-  display: block;
-  margin: 0 auto;
-}
-.btn_Projects{
-  margin-top: 15px;
+.education {
   display: flex;
-  justify-content:space-evenly;
+  flex-direction: column;
   align-items: center;
-  padding:2px;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* margin-bottom: 20px; */
 }
-.whitebox{
-  height: 280px;
+
+#edu_tit {
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
-.connections h3{
-  font-size: 20px;
-}
-.connections p{
-  font-size: 15px;
-}
-.sm{
+
+.course_details {
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-top: 10px;
-  margin-right: 50px;
-  padding: 10px;
-}
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
 }
 
-@media screen and (max-width: 480px){
-  .nav #dev{
-    font-size: 30px;
-    margin-left: 15px;
-  }
-  .nav .right_side{
-    display: none;
-  }
-  .background-svg {
-    position: absolute;
-    top: 260px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    z-index: -1;
-    background-repeat: repeat-x;
-    background-position: bottom;
-  }
-  .content .about{
-    margin-top:-120px ;
-    font-size: 25px;
-  }
-  .content #abbt{
-    font-size: 14px;
-  }
-  .skills{
-    margin: 65px;
-  }
-  .skills h2#title_skills {
-    margin-bottom: 20px;
-  }
-  .achievements {
-    margin: 30px;
-    padding: 15px;
-  }
-  .image{
-    display: none;
-  }
-  .achievements h2#achievements_title {
-    margin-top: 15px;
-    margin-bottom: 20px;
-  }
- .titleOfProjectShowCase h2{
-    font-size: 40px;
-  }
-  .certificates_list .c{
-    width:90%;
-    height: 88%;
-  }
-  .topOfTheProject #pt{
-    color: #fff;
-  }
-  .projects{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 40px;
-  }
-  .project1, 
-.project2,
-.project3 {
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 20px;
-  height:535px;
-  width: 350px;
-  margin: 20px;
+.course_details h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 2px;
+  text-align: center;
 }
 
-.btn_Projects{
-  margin-top: 10px;
-  display: flex;
-  justify-content:space-evenly;
-  align-items: center;
-  padding:2px;
+.course_details h4 {
+  font-size: 16px;
+  color: #666;
+  margin-top: 0;
+  padding-left: 20px;
+  text-align: center;
 }
-.whitebox{
-  height: 260px;
+
+.college h3 {
+  font-size: 18px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: center;
 }
-.connections h3{
-  font-size: 20px;
-}
-.connections p{
-  font-size: 15px;
-}
-.sm{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 10px;
-  margin-right: 50px;
-  padding: 10px;
-}
-}
-/* End of the styles */
